--- a/diseños/3col.css
+++ b/diseños/3col.css
@@ -1,10 +1,10 @@
 header{
     width: 100%;
-    height: 50px;
+    height: 150px;
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
     font-size: 50px;
+    font-weight: bold;
     border: 10px solid green;
     background-image: url("../images/portada.jpg");
-    
-}
+    }
