--- a/diseños/reglas.css
+++ b/diseños/reglas.css
@@ -16,6 +16,7 @@ header{
 div img{
         max-width: 100%;
         height: auto;
+        align-self: center;
     }
 
 body{
@@ -29,4 +30,8 @@ div h4{
 div p{
     text-align: justify;
     border: 5px double salmon;
+}
+iframe{
+    width: 100%;
+    height: 400px;
 }
